# keeput

./: README.md  docker-compose.yml
.claude/: .mcp.json
.claude/commands/: commit-msg.md  git-commit.md
.claude/skills/analyzer-architecture-review/: SKILL.md
.claude/skills/analyzer-architecture-review/references/: analyzer-architecture.md
.claude/skills/github-issue-creator/: SKILL.md
.claude/skills/github-issue-creator/references/: issue_template.md
.claude/skills/go-code-review/: SKILL.md
.claude/skills/go-code-review/references/: concurrency-review.md  go-coding-standards.md  review-checklist.md
.github/workflows/: cd.yaml  ci.yaml  daily.yaml  temp.yaml
adr/: 001-system-architecture-overview.md  README.md
app/: .env.awscollector.example  .env.example  .gitignore  .mise.toml  Dockerfile.Analyzer  Makefile  analyzer-otel-config.yaml  analyzer_collector_config.yaml  compose.yaml  go.mod  go.sum  golangci-lint.mod
app/analyze/internal/model/: entry.go
app/analyzer/: .env.example  .gitignore  Dockerfile  Makefile  compose.yaml  function.json  go.mod  go.sum
app/analyzer/adr/: issue-101
app/locker/: README.md  package-lock.json  package.json  worker-configuration.d.ts  wrangler.jsonc
app/locker/src/: index.ts  locker.ts
app/notifier/: CHANGELOG.md  notifier.cabal
app/notifier/app/: Main.hs
app/notifier/src/Service/: Notifier.hs
app/notifier/src/Usecase/: Notifier.hs
app/viewer/: README.md  cloudflare-env.d.ts  package-lock.json  package.json  wrangler.jsonc
app/viewer/.codex/: AGENTS.md
infra/: .gitignore
rdb/: schema.sql
(+56 files in other folders)
