cabal-version:      3.6
name:               notifier
version:            0.1.0.0
author:             Shinya Sakae
maintainer:         ss49919201@gmail.com
extra-source-files: CHANGELOG.md

executable notifier
    main-is:          Main.hs
    build-depends:    base ^>=4.16.4.0, aeson, bytestring, http-conduit
    hs-source-dirs:   app
    default-language: Haskell2010
